# api-service

./: Dockerfile.prod  Makefile  pyproject.toml
src/app/: deps.py  main.py
src/app/api/routes/: ask.py  health.py
src/app/configs/: config.py
src/app/prompts/: ask.py
src/app/services/: rag_service.py
tests/: test_ask.py
